--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>HIRO → Strawberry AR</title>
+  <title>HIRO → AR Image (iPhone-safe)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
-
-  <!-- A-Frame + AR.js -->
   <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
-
   <style>
     html,body{margin:0;overflow:hidden;font-family:system-ui,-apple-system,Segoe UI,Roboto}
     .hint{position:fixed;left:50%;top:14px;transform:translateX(-50%);
-      background:rgba(0,0,0,.7);color:#fff;padding:8px 14px;border-radius:16px;z-index:9999;font-size:14px}
-    .status{position:fixed;left:12px;bottom:12px;background:rgba(0,0,0,.6);color:#fff;
+      background:rgba(0,0,0,.72);color:#fff;padding:8px 14px;border-radius:16px;z-index:9999;font-size:14px}
+    .status{position:fixed;left:12px;bottom:12px;background:rgba(0,0,0,.7);color:#fff;
       padding:6px 10px;border-radius:10px;z-index:9999;font-size:12px}
     .hidden{display:none}
   </style>
@@ -30,18 +27,16 @@
     renderer="logarithmicDepthBuffer:true; antialias:true; alpha:true"
     arjs="sourceType: webcam; detectionMode: mono; facingMode: environment; debugUIEnabled:false;"
   >
-    <a-assets timeout="15000">
-      <!-- We set src via JS so spaces/parentheses are properly encoded -->
+    <a-assets timeout="20000">
       <img id="menu" crossorigin="anonymous">
     </a-assets>
 
     <a-marker preset="hiro" smooth="true" smoothCount="10" smoothTolerance="0.01" smoothThreshold="5">
-      <!-- Optional white backing for contrast -->
       <a-plane position="0 0 -0.05" rotation="-90 0 0" width="2.2" height="1.3"
                color="#ffffff" opacity="0.95" material="shader: flat"></a-plane>
 
-      <!-- Your image -->
       <a-image id="menuImage" src="#menu" rotation="-90 0 0" position="0 0 0" width="2" height="1"
+        material="shader: flat"
         animation__fadeIn="property: opacity; from: 0; to: 1; dur: 700; easing: easeInOutQuad; startEvents: markerFound"
         animation__float="property: position; to: 0 0.1 0; dur: 1800; dir: alternate; loop: true; easing: easeInOutSine">
       </a-image>
@@ -51,33 +46,55 @@
   </a-scene>
 
   <script>
-    // ---- SET THIS to your exact filename in the REPO ROOT (same folder as index.html)
-    const FILE_NAME = "Strawberry (50 x 100 cm).jpg"; // <- change to .png if yours is PNG
-    // ------------------------------------
+    // === CONFIG ===
+    // Your file is in the repo ROOT next to index.html:
+    const FILE_NAME = "Strawberry (50 x 100 cm) (1).jpg"; // change to .png if that’s your file
+    const MAX_DIM = 2048; // iPhone-safe max texture dimension
 
     const statusEl = document.getElementById('status');
+    const hint = document.getElementById('hint');
     function setStatus(t){ statusEl.textContent = t; }
 
-    // Load the image from the root, handling spaces/parentheses
-    const encodedPath = "./" + encodeURI(FILE_NAME);
-    const menuEl = document.getElementById('menu');
+    // Quality downscale (iterative) to avoid black textures on iOS WebGL
+    function downscaleImage(img, maxDim){
+      let w = img.naturalWidth, h = img.naturalHeight;
+      if (Math.max(w,h) <= maxDim) return null; // no need
+      let ratio = maxDim / Math.max(w,h);
+      let cw = Math.round(w * ratio), ch = Math.round(h * ratio);
+      // Two-pass for quality on huge images:
+      let off1 = document.createElement('canvas');
+      off1.width = cw; off1.height = ch;
+      let ctx1 = off1.getContext('2d');
+      ctx1.drawImage(img, 0, 0, cw, ch);
+      return off1.toDataURL('image/jpeg', 0.9); // JPEG data URL (fast + small)
+    }
 
-    // Preload to confirm it exists and show helpful status
-    const test = new Image();
-    test.onload = () => {
-      menuEl.setAttribute('src', encodedPath);
-      setStatus("Image loaded ✓");
-      setTimeout(()=>statusEl.classList.add('hidden'), 1500);
-      console.log("Loaded:", encodedPath, test.naturalWidth+"x"+test.naturalHeight);
-    };
-    test.onerror = () => {
-      setStatus("❌ Image not found: " + FILE_NAME);
-      console.error("Image not found at", encodedPath);
-    };
-    test.src = encodedPath + "?v=" + Date.now(); // cache-bust
+    // Load original, downscale if needed, then feed A-Frame a data URL or original
+    (function loadTexture(){
+      const path = "./" + encodeURI(FILE_NAME);
+      const test = new Image();
+      test.crossOrigin = "anonymous";
+      test.onload = () => {
+        setStatus(Image loaded (${test.naturalWidth}×${test.naturalHeight}));
+        const dataURL = downscaleImage(test, MAX_DIM);
+        const menuEl = document.getElementById('menu');
+        if (dataURL){
+          menuEl.setAttribute('src', dataURL);
+          setStatus(Downscaled in browser → iPhone-safe ✓);
+        } else {
+          menuEl.setAttribute('src', path);
+          setStatus(Using original size ✓);
+        }
+        setTimeout(()=>statusEl.classList.add('hidden'), 1500);
+      };
+      test.onerror = () => {
+        setStatus("❌ Image not found: " + FILE_NAME);
+        console.error("Image not found:", path);
+      };
+      test.src = path + "?v=" + Date.now(); // cache-bust
+    })();
 
-    // Show a hint after camera starts; hide when marker is found
-    const hint = document.getElementById('hint');
+    // UI hint for marker detection
     window.addEventListener('arjs-video-loaded', () => hint.classList.remove('hidden'));
     document.addEventListener('DOMContentLoaded', () => {
       const marker = document.querySelector('a-marker');
