--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <script>
     // === CONFIG ===
     // Your file is in the repo ROOT next to index.html:
-    const FILE_NAME = "Strawberry (50 x 100 cm) (1).jpg"; // change to .png if that’s your file
+    const FILE_NAME = "Strawberry (50 x 100 cm).jpg"; // change to .png if that’s your file
     const MAX_DIM = 2048; // iPhone-safe max texture dimension
 
     const statusEl = document.getElementById('status');
